# wk-371tti-net-search-engine

./: .gitignore  Cargo.toml  README.md  rss_ingest.py  wikipedia.py
index_data/: 0.index  1.index  10.index  11.index  12.index  13.index  14.index  15.index  2.index  3.index  4.index  5.index  6.index  7.index  8.index  9.index  global.corpus
src/: collect.rs  context.rs  http_client.rs  index.rs  lib.rs  main.rs  tokenize.rs
