[package]
name = "wk-371tti-net-search-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
kurosabi = "0.4.7"
tf-idf-vectorizer = "0.5.2"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std", "signal"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4.28"
dashmap = "6.1.0"
rayon = "1.11.0"
bincode = "1.3.3"
percent-encoding = "2.3.2"
env_logger = "0.11"






